<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/loginShow"
        android:checkableBehavior="none">
        <item
            android:id="@+id/mainOrderFragment"
            android:icon="@drawable/order"
            android:title="@string/textOrder" />

        <item
            android:id="@+id/commentFragment"
            android:icon="@drawable/comment"
            android:title="@string/textComment" />

        <item
            android:id="@+id/statsFragment"
            android:icon="@drawable/stats"
            android:title="@string/textStats" />

        <item
            android:id="@+id/personFragment"
            android:icon="@drawable/person"
            android:title="@string/textPerson" />
    </group>
</menu>